framework/reef-native-panel/src/runtime/snapshots/reef_native_panel__runtime__snapshot_tests__snapshot_tests__compact_initial.snap
---
source: framework/reef-native-panel/src/runtime/snapshot_tests.rs
assertion_line: 32
expression: snapshot
---
scenario: compact_initial
primitives:
  - type: RoundRect
    frame:
      x: 0
      y: 0
      width: 208
      height: 44
    radius: 22
    color: "rgb(18, 18, 22)"
  - type: Text
    role: CompactHeadline
    origin:
      x: 52
      y: 15
    max_width: 156
    text: AI Gateway
    color: "rgb(255, 255, 255)"
    size: 13
    weight: Semibold
    alignment: Center
    alpha: 1
  - type: Text
    role: CompactActiveCount
    origin:
      x: 168
      y: 14
    max_width: 24
    text: "3"
    color: "rgb(102, 222, 145)"
    size: 15
    weight: Semibold
    alignment: Right
    alpha: 1
metadata:
  timestamp: 2026-05-30
  display_mode: Compact
  animation_progress: 0
