framework/reef-native-panel/src/runtime/snapshots/reef_native_panel__runtime__snapshot_tests__snapshot_tests__empty_state.snap
---
source: framework/reef-native-panel/src/runtime/snapshot_tests.rs
assertion_line: 217
expression: snapshot
---
scenario: empty_state
primitives:
  - type: RoundRect
    frame:
      x: 0
      y: 0
      width: 400
      height: 200
    radius: 16
    color: "rgb(12, 12, 15)"
  - type: Text
    role: CardTitle
    origin:
      x: 200
      y: 90
    max_width: 300
    text: No active sessions
    color: "rgb(156, 166, 184)"
    size: 14
    weight: Normal
    alignment: Center
    alpha: 0.7
metadata:
  timestamp: 2026-05-30
  display_mode: Expanded
  animation_progress: 1
