framework/reef-native-panel/src/runtime/snapshots/reef_native_panel__runtime__snapshot_tests__snapshot_tests__expanding_75.snap
---
source: framework/reef-native-panel/src/runtime/snapshot_tests.rs
assertion_line: 112
expression: snapshot
---
scenario: expanding_75
primitives:
  - type: RoundRect
    frame:
      x: 0
      y: 0
      width: 352
      height: 236
    radius: 17.5
    color: "rgb(18, 18, 22)"
metadata:
  timestamp: 2026-05-30
  display_mode: Expanding
  animation_progress: 0.75
